# yt2transcript

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
templates/: index.html
