[project]
name = "yt2script"
version = "0.1.0"
description = ""
authors = [
    {name = "hassanxelamin",email = "hello@hassanelamin.co"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (==2.3.3)",
    "python-dotenv (==1.0.0)",
    "youtube-dl (==2021.12.17)",
    "youtube-transcript-api (==0.6.1)",
    "requests (==2.31.0)",
    "gunicorn (==21.2.0)",
    "flask-cors (==4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
